--- a/apps/registration/templates/registration/success.html
+++ b/apps/registration/templates/registration/success.html
@@ -5,7 +5,7 @@
         <title>Login & Registration</title>
     </head>
     <body>
-            <h1>You made it! Welcome {{user.0.first_name|title}} !!</h1></br></br>
+            <h1>You made it! Welcome {{user.first_name|title}} !!</h1></br></br>
 
             <a href="/logout">logout</a>
 
@@ -22,11 +22,6 @@
 
 
 <!-- {{messages}} -->
-
-
-<!-- {% for u in user %} -->
-<!-- {{u.first_name}} -->
-<!-- {% endfor %} -->
 
   {%for msg in messages%}
 
